tests/snapshots/width_snapshots__per_crate_70.snap
---
source: tests/width_snapshots.rs
expression: "rendered(&entries, &options(width, false))"
---
Per-crate summary:
┌───────────────────────────────────────────────┬───────────┬────────┐
│ Crate                                         ┆ Functions ┆ Crappy │
╞═══════════════════════════════════════════════╪═══════════╪════════╡
│ a_workspace_member_with_a_rather_long_crate_… ┆         7 ┆      1 │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ cargo_crap_core                               ┆         7 ┆      1 │
└───────────────────────────────────────────────┴───────────┴────────┘
┌───┬───────┬────┬──────────┬──────────────────┬─────────────────────┐
│   ┆  CRAP ┆ CC ┆ Coverage ┆ Function         ┆ Location            │
╞═══╪═══════╪════╪══════════╪══════════════════╪═════════════════════╡
│ ✗ ┆ 156.0 ┆ 12 ┆  12.5%   ┆ write_pr_commen… ┆ …/pr_comment.rs:388 │
├╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ✗ ┆  42.0 ┆  6 ┆ —        ┆ parse_lcov       ┆ src/coverage.rs:149 │
├╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ▲ ┆  28.0 ┆  5 ┆ 100.0%   ┆ helper_function… ┆ …/module_00.rs:10   │
├╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ▲ ┆  26.0 ┆  5 ┆  92.5%   ┆ helper_function… ┆ …/module_01.rs:11   │
├╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ▲ ┆  24.0 ┆  4 ┆  85.0%   ┆ helper_function… ┆ …/module_02.rs:12   │
├╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ▲ ┆  22.0 ┆  4 ┆  77.5%   ┆ helper_function… ┆ …/module_03.rs:13   │
├╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ▲ ┆  20.0 ┆  4 ┆  70.0%   ┆ helper_function… ┆ …/module_04.rs:14   │
├╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ▲ ┆  18.0 ┆  4 ┆  62.5%   ┆ helper_function… ┆ …/module_05.rs:15   │
├╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ▲ ┆  16.0 ┆  4 ┆  55.0%   ┆ helper_function… ┆ …/module_06.rs:16   │
├╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ▲ ┆  14.0 ┆  3 ┆  47.5%   ┆ helper_function… ┆ …/module_07.rs:17   │
├╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ▲ ┆  12.0 ┆  3 ┆  40.0%   ┆ helper_function… ┆ …/module_08.rs:18   │
├╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ✓ ┆  10.0 ┆  3 ┆  32.5%   ┆ helper_function… ┆ …/module_09.rs:19   │
└───┴───────┴────┴──────────┴──────────────────┴─────────────────────┘
· 2 more below threshold — use --top, --min 0, or --format markdown to see them.
✗ 2/14 function(s) exceed CRAP threshold 30.
