tests/snapshots/width_snapshots__uncovered_50.snap
---
source: tests/width_snapshots.rs
expression: "rendered(&entries, &options(width, true))"
---
┌───┬───────┬──────────┬──────────┬─────────────────────┐
│   ┆  CRAP ┆ Coverage ┆ Function ┆ Location            │
╞═══╪═══════╪══════════╪══════════╪═════════════════════╡
│ ✗ ┆ 156.0 ┆  12.5%   ┆ write_p… ┆ …/pr_comment.rs:388 │
├╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ✗ ┆  42.0 ┆ —        ┆ parse_l… ┆ src/coverage.rs:149 │
├╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ▲ ┆  28.0 ┆ 100.0%   ┆ helper_… ┆ …/module_00.rs:10   │
├╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ▲ ┆  26.0 ┆  92.5%   ┆ helper_… ┆ …/module_01.rs:11   │
├╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ▲ ┆  24.0 ┆  85.0%   ┆ helper_… ┆ …/module_02.rs:12   │
├╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ▲ ┆  22.0 ┆  77.5%   ┆ helper_… ┆ …/module_03.rs:13   │
├╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ▲ ┆  20.0 ┆  70.0%   ┆ helper_… ┆ …/module_04.rs:14   │
├╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ▲ ┆  18.0 ┆  62.5%   ┆ helper_… ┆ …/module_05.rs:15   │
├╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ▲ ┆  16.0 ┆  55.0%   ┆ helper_… ┆ …/module_06.rs:16   │
├╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ▲ ┆  14.0 ┆  47.5%   ┆ helper_… ┆ …/module_07.rs:17   │
├╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ▲ ┆  12.0 ┆  40.0%   ┆ helper_… ┆ …/module_08.rs:18   │
├╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ✓ ┆  10.0 ┆  32.5%   ┆ helper_… ┆ …/module_09.rs:19   │
└───┴───────┴──────────┴──────────┴─────────────────────┘
· 2 more below threshold — use --top, --min 0, or --format markdown to see them.
✗ 2/14 function(s) exceed CRAP threshold 30.
